--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.1.0",
-    "@react-native-community/datetimepicker": "^3.0.4",
+    "@react-native-community/datetimepicker": "3.0.0",
     "expo": "~39.0.2",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
