--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.1.0",
-    "@react-native-community/datetimepicker": "3.0.0",
     "expo": "~39.0.2",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
@@ -17,7 +16,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "@react-native-community/datetimepicker": "3.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
