--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.1.0",
     "@react-native-community/datetimepicker": "3.0.0",
-    "moment": "^2.29.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/material-top-tabs": "^5.3.9",
     "@react-navigation/native": "^5.8.9",
@@ -19,12 +18,14 @@
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "install": "^0.13.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-moment": "^1.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-maps": "0.27.1",
     "react-native-modalize": "^2.0.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
