--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.12.6",
     "axios": "^0.21.0",
     "expo": "^39.0.4",
+    "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "install": "^0.13.0",
