--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "^39.0.4",
     "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
+    "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "install": "^0.13.0",
     "moment": "^2.29.1",
